fixed deprecated call